# python-sdk

./: .gitignore  Pipfile  README-PYPI.rst  README.md  README.rst  README_PYPI.rst  pyproject.toml  secretsApi.py  test-async.py  test-fast-api.py  test-flask.py  test-sanic.py  test.py  test2.py  test_flask2.py  tox.ini
.github/: CODEOWNERS
examples/example1/: app.py  secretsApi.py
frontegg/: __init__.py  _mixins.py  aiohttp.py  client.py  conf.py  flask.py  permissions.py
frontegg/baseConfig/: frontegg_authenticator.py  frontegg_config.py  frontegg_proxy.py  identity_mixin.py
frontegg/base_config/: __init__.py  frontegg_authenticator.py  frontegg_config.py  identity_mixin.py
frontegg/common/: __init__.py  async_identity_mixin.py  frontegg_async_authenticator.py  frontegg_authenticator.py  frontegg_config.py  frontegg_context.py  identity_mixin.py  package_utils.py
frontegg/fastapi/: README.md  __init__.py  __init__.pyi  frontegg.py  frontegg.pyi
frontegg/flask/: README.md  __init__.py  authentication_middleware.py  contextProvider.py  flask.py  frontegg.py  withAuthentication.py  withAuthnrication.py
frontegg/flask2/: authentication_middleware.py  contextProvider.py  flask.py  withAuthentication.py
frontegg/helpers/: create_context.py  exceptions.py  frontegg_headers.py  frontegg_urls.py  jwt_types.py  logger.py  retry.py  singleton.py
frontegg/sanic/: README.md  __init__.py  frontegg.py
tests/: conftest.py  test_functional.py
tests/cassettes/: test_get_audit_stats.yaml  test_get_audits.yaml  test_get_audits_metadata.yaml  test_send_audits.yaml  (+4 more)
(+42 files in other folders)
